# official_devices

./: .ci.yml  .gitignore  .travis.yml  Android.mk  AndroidProducts.mk  BoardConfig.mk  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.maintainers  PixelExperience_oxygen-8.1.0-20180908-0550-OFFICIAL-Changelog.txt  PixelExperience_rosy-8.1.0-20181227-0024-OFFICIAL-Changelog.txt  README.md  README.mkdn  aosp_hydrogen.mk  device.mk  devices.json  extract-files.sh  full_hydrogen.mk  jsonFormatter.py  json_tester.js  json_tester.py  lint_json.rs  maintainers.sh  monthly_update_check.js  proprietary-files.txt  runner.sh  setup-makefiles.sh  system.prop  vendorsetup.sh
audio/: audio_platform_info_extcodec.xml  mixer_paths.xml
bluetooth/: bdroid_buildcfg.h
builds/: A6020.json  DRG_sprout.json  X00TD.json  X01BD.json  Z010D.json  a6000.json  ailsa_ii.json  albus.json  angler.json  berkeley.json  beryllium.json  bullhead.json  c106.json  cancro.json  capricorn.json  cedric.json  cepheus.json  cheeseburger.json  chef.json  condor.json  crackling.json  daisy.json  dipper.json  dumpling.json  enchilada.json  ether.json  fajita.json  falcon.json  gemini.json  grus.json  ham.json  harpia.json  helium.json  hero2lte.json  herolte.json  hlte.json  hltechn.json  hltekor.json  hltetmo.json  hydrogen.json  (+59 more)
changelog/: PixelExperience_Plus_X00TD-9.0-20190824-0430-OFFICIAL.txt  PixelExperience_X00TD-9.0-20181215-1654-OFFICIAL.txt  PixelExperience_X00TD-9.0-20190121-0849-OFFICIAL.txt  PixelExperience_X00TD-9.0-20190222-1059-OFFICIAL.txt  (+11 more)
configs/: calib.cfg
idc/: uinput-fpc.idc
(+1364 files in other folders)
