[package]
name = "pixel-ci"
version = "0.1.0"
authors = ["baalajimaestro <baalajimaestro@pixelexperience.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="json-linter"
path = "lint_json.rs"

[dependencies]
json = "0.12.1"

